prod/mark-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mark-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mark-demo
  template:
    metadata:
      labels:
        app: mark-demo
    spec:
      containers:
      - name: mark-demo
        image: image-registry.openshift-image-registry.svc:5000/mark-pipeline-demo/mark-demo:prod
        imagePullPolicy: Always
        ports:
        - containerPort: 80
