prod/mark-demo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mark-demo
    app.kubernetes.io/component: mark-demo
    app.kubernetes.io/instance: mark-demo
    app.kubernetes.io/part-of: mark-demo
  name: mark-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: mark-demo
    weight: 100
  wildcardPolicy: None
